--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My Project</title>
   </head>
   <body>
+    <nav>Links</nav>
     <h1>Hello, world!</h1>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sequi delectus nobis vel et. Nobis alias, enim nulla architecto dolor eum aperiam, distinctio itaque deleniti quos rem modi explicabo totam!</P>
   </body>
